message_header: Avoid hiding icons on smaller widths.
Hiding icons based on the message-lists container didn’t work
well. It ended up hiding icons in the message header even
when #channel > topic wasn’t wide enough for that to
meaningfully improve readability.

This is a flawed mechanism because we decide to hide
the icons based on some predetermined width of the
container instead of the actual width occupied by
the recipient text in the header.

This reverts commit fb40a7fc61f3dea72e2e5646a37b2948273997a2.

The proper fix would involve rewriting
`.message-header-contents` to use CSS grid. This
is elaborted by Karl in #37491.

Discussion: https://chat.zulip.org/#narrow/channel/9-issues/topic/conversation.20header.20icons.20not.20showing.20on.20pretty.20wide.20width/near/2352063

--- a/web/styles/message_header.css
+++ b/web/styles/message_header.css
@@ -328,46 +328,6 @@
     }
 }
 
-@container message-lists (width <  $cq_message_actions_hide_width_min) {
-    .recipient_bar_controls {
-        /* We don't want the controls container to occupy the space freed
-        up by hiding the message action icons so it can be
-        utilized to show more of the topic */
-        flex-grow: 0;
-        margin-right: auto;
-
-        .recipient-bar-control {
-            display: none;
-
-            /* Always show the vdots */
-            &.recipient-row-topic-menu {
-                display: block;
-            }
-        }
-    }
-}
-
-@media (width < $message_actions_hide_width_min) {
-    .without-container-query-support {
-        .recipient_bar_controls {
-            /* We don't want the controls container to occupy the space freed
-            up by hiding the message action icons so it can be
-            utilized to show more of the topic */
-            flex-grow: 0;
-            margin-right: auto;
-
-            .recipient-bar-control {
-                display: none;
-
-                /* Always show the vdots */
-                &.recipient-row-topic-menu {
-                    display: block;
-                }
-            }
-        }
-    }
-}
-
 .spectator-view .recipient_bar_controls .recipient-bar-control {
     &.recipient-bar-copy-link-to-topic {
         display: flex;
